# gbheterogeneity

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
gbheterogeneity/image_processing/: train.py  trainer.py
gbheterogeneity/image_processing/data/: datasets.py  patching.py
gbheterogeneity/image_processing/models/: encoder.py  vit.py
gbheterogeneity/multimodal_processing/: gradcam_viz.py  rna_retrieval.py  train.py  trainer.py
gbheterogeneity/multimodal_processing/data/: datasets.py
gbheterogeneity/multimodal_processing/models/: co_attention.py  multimodal.py
gbheterogeneity/rna_processing/: train.py
gbheterogeneity/rna_processing/data/: __init__.py  datasets.py  preprocessing.py
gbheterogeneity/rna_processing/models/: __init__.py  autoencoders.py  transformer.py
gbheterogeneity/rna_processing/trainers/: __init__.py  ae_trainer.py  att_survival_time_trainer.py  att_trainer.py
gbheterogeneity/utils/git/: utils.py
gbheterogeneity/utils/mlflow/: initialization.py  pytorch_logging.py
gbheterogeneity/utils/pytorch/: __init__.py  common_optimizers.py  common_schedulers.py  cosine_scheduler.py  device.py  distributed_tools.py  generic_trainer.py  initialization.py  parameter_getter.py  selector.py  simple_distributed_trainer.py  (+1 more)
gene_clustering/: mapping_generator.py  ppi_clustering.py  ppi_graph.py
scripts/: compute_rna_gradcams.py  compute_wsi_gradcams.py  evaluate_retrieval.py  pretrain_rna.py  pretrain_wsi.py  train_multimodal_best.py
scripts/variants/: train_multimodal_chromosome_clusters.py  train_multimodal_frozen_encoders.py
