[project]
name = "gbheterogeneity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coloredlogs>=15.0.1",
    "easydict>=1.13",
    "gitpython>=3.1.44",
    "imagecodecs>=2025.3.30",
    "matplotlib>=3.10.1",
    "mlflow>=2.22.0",
    "mygene>=3.2.2",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyvips[binary]>=3.0.0",
    "scikit-network>=0.33.1",
    "scipy>=1.15.2",
    "tifffile>=2025.3.30",
    "timm>=1.0.15",
    "torch>=2.6.0",
]
